# protodemo

./: CMakeLists.txt  README  demo.proto  main.cpp  protodemo.cpp  protodemo.h  protodemo.qrc  protodemo.ui
